changed background color on landing page behind caurousel, fixed the goals page so a completed goal will only show 100%

--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -1,3 +1,6 @@
+.background {
+  background-color: white;
+}
 .calendar {
   cursor: pointer;
   font-size: 20px;
