--- a/src/Pages/Landing Page/LandingPage.css
+++ b/src/Pages/Landing Page/LandingPage.css
@@ -8,7 +8,7 @@
 }
 
 .landing-main {
-  background-color: white;
+  background-color: whitesmoke;
   height: 100vh;
   font-family: 'Raleway', sans-serif;
 }
@@ -23,7 +23,7 @@
 /* //Landing Carousel Page */
 .landing-carousel {
   margin: 0 auto;
-  margin-bottom: 80px;
+  margin-bottom: 150px;
 }
 
 .text-box { 
@@ -40,6 +40,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 50px 50px 50px 50px;
+  background-color: white;
   border: 1px solid rgb(224, 222, 222);
   box-shadow: 3px 3px 10px 2px rgba(175, 174, 174, 0.65);
 }
